js262/test/built-ins/RegExp/property-escapes/generated/strings/Basic_Emoji-negative-P.js


/*---
author: Mathias Bynens
description: >
  Negating Unicode property escapes for `Basic_Emoji` (property of strings) with `\P{…}` throws an early error.
info: |
  Generated by https://github.com/mathiasbynens/unicode-property-escapes-tests
  Unicode v16.0.0
esid: sec-isvalidregularexpressionliteral
features: [regexp-unicode-property-escapes, regexp-v-flag]
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

/\P{Basic_Emoji}/v;
